--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,3 @@
-/**
-* Template Name: Baker
-* Updated: Jul 27 2023 with Bootstrap v5.3.1
-* Template URL: https://bootstrapmade.com/baker-free-onepage-bootstrap-theme/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -31,6 +23,41 @@ h4,
 h5,
 h6 {
   font-family: "Raleway", sans-serif;
+}
+
+/*--------------------------------------------------------------
+# Botones
+--------------------------------------------------------------*/
+.botn-link {
+  display: inline-block;
+  background: #ffc107;
+  border: 0;
+  padding: 10px 30px;
+  color: #fff;
+  transition: background-color 0.4s, transform 0.4s;
+  border-radius: 50px;
+  text-decoration: none;
+}
+
+.botn-link:hover {
+  background: #ff9800;
+  transform: scale(1.05);
+}
+
+
+/*--------------------------------------------------------------
+# Post
+--------------------------------------------------------------*/
+.banner-post {
+  --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: calc(-1 * var(--bs-gutter-y));
+  margin-right: calc(-.5 * var(--bs-gutter-x));
+  margin-left: calc(-.5 * var(--bs-gutter-x));
+  height: 50px;
+  overflow: hidden;
 }
 
 /*--------------------------------------------------------------
