--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,11 @@ h6 {
   font-family: "Raleway", sans-serif;
 }
 
+.separator {
+  border: none;
+  border-top: 1px solid #ccc; /* Cambia el color y el tamaño según tus preferencias */
+  margin: 10px 0; /* Espacio alrededor de la línea */
+}
 /*--------------------------------------------------------------
 # Botones
 --------------------------------------------------------------*/
@@ -56,8 +61,28 @@ h6 {
   margin-top: calc(-1 * var(--bs-gutter-y));
   margin-right: calc(-.5 * var(--bs-gutter-x));
   margin-left: calc(-.5 * var(--bs-gutter-x));
-  height: 50px;
+  height: 250px;
   overflow: hidden;
+}
+
+.banner-post img {
+  display: block;
+  max-width: 100%;
+}
+
+.contenido {
+  margin-top: -100px;
+  background-color: white;
+}
+
+.rightbar {
+  margin: 0;
+  padding: 25px;
+  background-color: #f4f5f8;
+  border-radius: 25px;
+  list-style: none;
+  align-items: center;
+  text-align: center;
 }
 
 /*--------------------------------------------------------------
@@ -433,7 +458,7 @@ h6 {
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 20px 0;
 }
 
 .section-bg {
