--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,10 @@ h6 {
   font-family: "Raleway", sans-serif;
 }
 
+.mt-6 {
+  margin-top: 8rem;
+}
+
 .separator {
   border: none;
   border-top: 1px solid #ccc; /* Cambia el color y el tamaño según tus preferencias */
@@ -49,6 +53,95 @@ h6 {
   transform: scale(1.05);
 }
 
+/*--------------------------------------------------------------
+# input
+--------------------------------------------------------------*/
+
+.search-container {
+  float: right;
+  background: #fff;
+  padding: 6px 10px;
+  border-radius: 50px;
+  text-align: left;
+  border: 1px solid #e1e4ec;
+}
+
+.search-container input[type=text] {
+  font-size: 17px;
+  border: 0;
+  padding: 4px 8px;
+  width: calc(100% - 100px);
+}
+
+.search-container button {
+  position: relative;
+  top: -1px;
+  right: -1px;
+  bottom: -1px;
+  border: 0;
+  background: none;
+  font-size: 16px;
+  padding: 10px 20px;
+  background: #ffc107;
+  color: #fff;
+  transition: 0.3s;
+  border-radius: 50px;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+}
+
+.search-container button:hover {
+  background: #ffce3a;
+}
+
+@media screen and (max-width: 600px) {
+  .search-container {
+    float: none;
+  }
+  .search-container a, .search-container input[type=text], .topnav .search-container button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .search-container input[type=text] {
+    border: 1px solid #ccc;  
+  }
+}
+
+/*--------------------------------------------------------------
+# Categorias
+--------------------------------------------------------------*/
+.list-xl {
+  padding:35px;
+  padding-right: 5rem;
+  padding-left: 5rem;
+}
+
+.list-xl li {
+  border-radius: 35px;
+  list-style: none;
+}
+
+.list-xl .title{
+  padding: 2%;
+  padding-top: 4%;
+  padding-right: 3%
+}
+
+.list-xl img{
+  border-top-left-radius: 35px;
+  border-bottom-left-radius:35px;
+  width:100%;
+}
+
+.list-xl p {
+  color: white;
+  padding: 2%;
+  font-size: 1.2rem;
+  padding-right: 3%
+}
 
 /*--------------------------------------------------------------
 # Post
@@ -510,67 +603,6 @@ section {
   color: #aab3c7;
 }
 
-/*--------------------------------------------------------------
-# Breadcrumbs
---------------------------------------------------------------*/
-.breadcrumbs {
-  padding: 20px 0;
-  background-color: #fafafc;
-  min-height: 40px;
-  margin-top: 82px;
-}
-
-@media (max-width: 992px) {
-  .breadcrumbs {
-    margin-top: 68px;
-  }
-}
-
-.breadcrumbs h2 {
-  font-size: 24px;
-  font-weight: 300;
-  margin: 0;
-}
-
-@media (max-width: 992px) {
-  .breadcrumbs h2 {
-    margin: 0 0 10px 0;
-  }
-}
-
-.breadcrumbs ol {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  font-size: 14px;
-}
-
-.breadcrumbs ol li+li {
-  padding-left: 10px;
-}
-
-.breadcrumbs ol li+li::before {
-  display: inline-block;
-  padding-right: 10px;
-  color: #6c757d;
-  content: "/";
-}
-
-@media (max-width: 768px) {
-  .breadcrumbs .d-flex {
-    display: block !important;
-  }
-
-  .breadcrumbs ol {
-    display: block;
-  }
-
-  .breadcrumbs ol li {
-    display: inline-block;
-  }
-}
 
 /*--------------------------------------------------------------
 # Clients
@@ -599,31 +631,6 @@ section {
   }
 }
 
-/*--------------------------------------------------------------
-# About
---------------------------------------------------------------*/
-.about h3 {
-  font-weight: 700;
-  font-size: 34px;
-  color: #414c64;
-}
-
-.about h4 {
-  font-size: 20px;
-  font-weight: 700;
-  margin-top: 5px;
-}
-
-.about i {
-  font-size: 48px;
-  margin-top: 15px;
-  color: #8b97b3;
-}
-
-.about p {
-  font-size: 15px;
-  color: #848484;
-}
 
 /*--------------------------------------------------------------
 # Counts
