--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,6 +238,34 @@ code {
 }
 
 
+.tag-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 5px;
+  width: 300px;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.tag-input {
+  border: none;
+  outline: none;
+  flex: 1;
+}
+
+.tag {
+  background-color: #007BFF;
+  color: white;
+  border: none;
+  border-radius: 3px;
+  padding: 2px 5px;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
